[project]
name = "sts-suite"
description = "Terminal debugger for Feetech STS3215 smart serial bus servos"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Binh Pham", email = "binh.pham@livekit.io" },
]
keywords = [
    "feetech",
    "sts3215",
    "servo",
    "robotics",
    "serial",
    "tui",
    "debugger",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Terminals",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "pyserial>=3.5",
    "rustypot>=1.4.2",
    "textual>=0.50.0",
    "textual-plotext>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/pham-tuan-binh/sts-suite"
Repository = "https://github.com/pham-tuan-binh/sts-suite"
Issues = "https://github.com/pham-tuan-binh/sts-suite/issues"

[project.scripts]
sts = "sts_suite.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/sts_suite/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sts_suite"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sts_suite",
    "README.md",
    "LICENSE",
    "docs/screenshot.png",
]
